feat(tests): add slow E2E tests tags, E2E excludes slow tag, adds  new task 2e2Slow that runs only the new tag, modified pipeline